moniotr/examples/iptables/rules.v4
# Generated by iptables-save v1.6.1 on Fri Dec  1 00:13:54 2017
*nat
:PREROUTING ACCEPT [6273:2247147]
:INPUT ACCEPT [66:19310]
:OUTPUT ACCEPT [6:334]
:POSTROUTING ACCEPT [0:0]
-A POSTROUTING -o eth0 -j MASQUERADE
COMMIT
# Completed on Fri Dec  1 00:13:54 2017
# Generated by iptables-save v1.6.1 on Fri Dec  1 00:13:54 2017
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [36:6386]
-A INPUT -i eth0 -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -i br9 -j ACCEPT
-A INPUT -i br10 -j ACCEPT
-A INPUT -i br11 -j ACCEPT
-A INPUT -i br12 -j ACCEPT
-A FORWARD -i eth0 -o br9 -j ACCEPT
-A FORWARD -i br9 -o eth0 -j ACCEPT
-A FORWARD -i lo -j ACCEPT
COMMIT
# Completed on Fri Dec  1 00:13:54 2017
